Apply suggestions from code review
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -17,8 +17,8 @@ The following sections are currently supported:
 * extensions.json
 * product.json
 
-The *settings.json* section contains various settings that allow to customize different parts of the Code - OSS editor. +
-The *extensions.json* section contains recommended extensions are installed when a workspace is started. +
+The *settings.json* section contains various settings with which you can customize different parts of the Code - OSS editor. +
+The *extensions.json* section contains recommended extensions that are installed when a workspace is started. +
 The *product.json* section contains properties that you need to add to the editor's *product.json* file. If the property already exists, its value will be updated.
 
 .Procedure
