--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -25,7 +25,7 @@ The *configurations.json* section contains properties related to Code - OSS edit
 
 .Procedure
 
-* Add a new ConfigMap to the user's {orch-namespace}, define the supported sections, specify the properties you want to add.
+* Add a new ConfigMap to the user's {orch-namespace}, define the supported sections, and specify the properties you want to add.
 +
 ====
 [source,yaml]
