Fix namespace for the Applying editor configurations docs
Signed-off-by: Roman Nikitenko <rnikiten@redhat.com>

--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -79,7 +79,7 @@ immutable: false
 Make sure that the Configmap contains data in a valid JSON format.
 ====
 
-TIP: Consider adding the ConfigMap to the `eclipse-che` namespace. It allows to replicate the ConfigMap across all user namespaces while preventing modifications within user's namespaces. See xref:configuring-a-user-namespace.adoc[].
+TIP: Consider adding the ConfigMap to the {prod-namespace} namespace. It allows to replicate the ConfigMap across all user namespaces while preventing modifications within user's namespaces. See xref:configuring-a-user-namespace.adoc[].
 
 .Verification
 . Verify that settings defined in the ConfigMap are applied using one of the following methods:
