chore: Allow to configure editor download urls
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -90,6 +90,7 @@
 *** xref:show-deprecated-editors.adoc[]
 *** xref:configuring-default-editor.adoc[]
 *** xref:concealing-editors.adoc[]
+*** xref:configuring-editors-download-urls.adoc[]
 *** xref:customizing-openshift-che-consolelink-icon.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
 *** xref:configuring-oauth-for-git-providers.adoc[]
