--- a/modules/administration-guide/pages/configuring-dashboard.adoc
+++ b/modules/administration-guide/pages/configuring-dashboard.adoc
@@ -11,6 +11,8 @@
 
 * xref:configuring-editors-definitions.adoc[]
 
+* xref:configuring-editors-download-urls.adoc[]
+
 * xref:show-deprecated-editors.adoc[]
 
 * xref:configuring-default-editor.adoc[]
