--- a/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
+++ b/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
@@ -120,7 +120,7 @@ Check the list of published extensions by navigating to the URL defined in the O
 
 == Setting Up Internal Access to the Open VSX Service
 
-In addition to using a public route to reference the Open VSX registry, it's also possible to configure {prod-short} to set internal cluster service routing. This method provides enhanced security by keeping traffic confined within the cluster, avoiding public exposure.
+In addition to using a public route to reference the Open VSX registry, you can also configure {prod-short} to set internal cluster service routing. This method provides enhanced security by keeping traffic confined within the cluster, avoiding public exposure.
 
 .Procedure
 
