--- a/modules/administration-guide/pages/configuring-editors-download-urls.adoc
+++ b/modules/administration-guide/pages/configuring-editors-download-urls.adoc
@@ -4,7 +4,7 @@
 :navtitle: Configuring editors download urls
 
 [id="configuring-editors-download-urls"]
-= Configuring editors download urls
+= Configuring editors download URLs
 
 Learn how to configure editors download urls. This feature is valuable in air-gapped environments where editors cannot be retrieved from the public internet. Currently, this option is intended only for JetBrains editors and should not be used for other editor types.
 
