--- a/modules/administration-guide/pages/configuring-editors-download-urls.adoc
+++ b/modules/administration-guide/pages/configuring-editors-download-urls.adoc
@@ -10,7 +10,7 @@ This procedure describes how to configure download URLs for editors. This featur
 
 .Prerequisites
 
-* An active `{orch-cli}` session with administrative permissions to the {orch-name} cluster. See {orch-cli-link}.
+* You have an active `_orch-cli_` session with administrative permissions to the `{orch-name}` cluster. For more information, see {orch-cli-link}.
 
 * `jq`. See link:https://stedolan.github.io/jq/download/[Downloading `jq`].
 
