--- a/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
+++ b/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
@@ -67,7 +67,7 @@ podman push "${OPENVSX_CLI_IMAGE}"
 [IMPORTANT]
 ====
 
-Ensure that the image is publicly accessible so that your OpenShift cluster can pull it without requiring authentication.
+Ensure that the image is publicly accessible and can be pulled without authentication.
 
 ====
 
